# Cerberus

./: .gitignore  Cargo.toml  HOOKS_TODO.md  README.md  combined4.txt  rustfmt.toml
.cargo/: config.toml
.rules/: test.toml
cerberus/: Cargo.toml  build.rs
cerberus-common/: Cargo.toml
cerberus-common/src/: event.rs
cerberus-ebpf/: Cargo.toml
cerberus-ebpf/src/: main.rs  vmlinux.rs
cerberus-rules/: Cargo.toml
cerberus-rules/rules/: test-rule-2.toml  test-rule-3.toml  test-rule-5.toml
cerberus-rules/src/: engine.rs  error.rs  evaluator.rs  lib.rs  rule.rs
cerberus-tui/: Cargo.toml  build.rs
cerberus-tui/src/: error.rs  main.rs  trx.rs  worker.rs
cerberus-tui/src/core/: app_state.rs  event_handler.rs  mod.rs  state_process.rs  sys_state.rs  term_reader.rs  tui_impl.rs  tui_loop.rs
cerberus-tui/src/db/: db_bmc.rs  db_impl.rs  mod.rs
cerberus-tui/src/event/: app_event.rs  last_app_event.rs  mod.rs  trx.rs
cerberus-tui/src/rules/: dev-shm.toml  lkm-loader.toml  rk-exec.toml  rk-load.toml  rule.toml  rule2.toml  rule_module.toml  sus-bin.toml  test-rule-1.toml  tmp-exec.toml
cerberus-tui/src/styles/: common.rs
cerberus-tui/src/views/: action_view.rs  evaluated_event_view.rs  event_view.rs  general_event_view.rs  loaded_hooks_view.rs  main_view.rs  mod.rs  network_event_view.rs  summary_view.rs  support.rs
cerberus/src/: error.rs  main.rs  supervisor.rs  trx.rs  worker.rs
cerberus/src/agent/: core.rs
cerberus/src/cli/: args.rs
cerberus/src/core/: app_state.rs  event_handler.rs  state_process.rs  tui_impl.rs  tui_loop.rs
cerberus/src/daemon/: core.rs  utils.rs
cerberus/src/views/: action_view.rs  main_view.rs  mod.rs  network_event_view.rs  splash_view.rs
crates/apps/cerberus/: Cargo.toml
crates/apps/cerberus/src/: error.rs  main.rs  supervisor.rs  worker.rs
crates/apps/cerberus/src/agent/: core.rs
crates/apps/cerberus/src/cli/: args.rs
crates/apps/cerberus/src/core/: app_state.rs  event_handler.rs  mod.rs  state_process.rs  term_reader.rs  tui_impl.rs  tui_loop.rs
crates/apps/cerberus/src/core/scroll/: mod.rs  zone.rs
crates/apps/cerberus/src/event/: app_event.rs  last_app_event.rs  mod.rs
crates/apps/cerberus/src/hook_registry/: event.rs  helper_fns.rs  hook.rs  mod.rs  registry.rs
crates/apps/cerberus/src/log_line/: mod.rs  utils.rs
crates/apps/cerberus/src/rules/: lkm-loader.toml  non-root-sys-bin.toml  tmp-exec.toml
crates/apps/cerberus/src/styles/: common.rs
crates/apps/cerberus/src/views/: action_view.rs  correlated_event_view.rs  evaluated_event_view.rs  general_event_view.rs  main_view.rs  mod.rs  network_event_view.rs  summary_view.rs  supporddt.rs  support.rs
crates/apps/cerberus/src/views/support/render/: bpf.rs  fs.rs  mod.rs  network.rs  process.rs  utils.rs
crates/apps/cerberus/src/workers/: container_resolver.rs  hook_worker.rs  mod.rs  ringbuf.rs  rule.rs  rule_engine.rs  rule_watcher.rs
crates/libs/lib-common/: Cargo.toml
crates/libs/lib-common/src/event/: app.rs  cerberus.rs  engine.rs  impls.rs  meta.rs  mod.rs
crates/libs/lib-container/: Cargo.toml  build.rs
crates/libs/lib-container/examples/: c01-docker.rs
crates/libs/lib-container/src/: container.rs  container_manager.rs  error.rs  lib.rs  runtime.rs
crates/libs/lib-ebpf/: Cargo.toml
crates/libs/lib-ebpf-common/: Cargo.toml
crates/libs/lib-ebpf-common/src/: consts.rs  event.rs  flags_bpf.rs  lib.rs
crates/libs/lib-ebpf/src/: main.rs  utils.rs  vmlinux.rs
crates/libs/lib-ebpf/src/hooks/: bpf.rs  exec.rs  fs.rs  kern_module.rs  mod.rs  network.rs  process.rs
crates/libs/lib-event/: Cargo.toml
crates/libs/lib-event/src/: bound.rs  error.rs  lib.rs  oneshot.rs  trx.rs  unbound.rs
crates/libs/lib-rules/: Cargo.toml
crates/libs/lib-rules/rules/: any-bprm.toml  test-rule-1.toml  test-rule-4.toml  test-rule-5.toml  test-rule-6.toml
crates/libs/lib-rules/src/: error.rs  hash_utils.rs  lib.rs
crates/libs/lib-rules/src/compiled/: compiled_rules.rs
crates/libs/lib-rules/src/engine/: correlation.rs  ctx.rs  engine.rs  evaluator.rs  event.rs  identity.rs  mod.rs  rule_index.rs
crates/libs/lib-rules/src/engine/correlator/: correlator.rs  mod.rs  sharded.rs
crates/libs/lib-rules/src/executor/: mod.rs  response_executor.rs  support.rs
crates/libs/lib-rules/src/rule/: impls.rs  mod.rs  rule.rs  ruleset.rs  sequence.rs
crates/libs/lib-runtime-probe/: Cargo.toml
crates/libs/lib-runtime-probe/src/: error.rs  execution.rs  lib.rs  probe.rs  support.rs
crates/libs/lib-runtime-probe/test-data/: test.c  test.elf
docs/: field_index.md  rule_guide.md
lib-common/: Cargo.toml
lib-common/src/: event.rs  lib.rs
lib-container/: Cargo.toml
lib-container/src/: container.rs  container_manager.rs
lib-ebpf/: Cargo.toml
lib-ebpf/src/: main.rs
lib-event/src/: app_evt_types.rs  error.rs  lib.rs
lib-rules/: Cargo.toml
lib-rules/rules/: test-rule-1.toml  test-rule-6.toml
lib-rules/src/: compiled_rules.rs  correlation.rs  ctx.rs  engine.rs  error.rs  evaluator.rs  hash_utils.rs  lib.rs  rule.rs  rule_index.rs  ruleset.rs  sequence.rs
lib-rules/src/compiled/: compiled_rules.rs  mod.rs
lib-rules/src/engine/: correlation.rs  engine.rs  evaluator.rs  mod.rs  rule_index.rs
lib-rules/src/rule/: rule.rs
rust-xp-aya-ebpf/: Cargo.toml  build.rs
rust-xp-aya-ebpf-common/: Cargo.toml
rust-xp-aya-ebpf-common/src/: event.rs  lib.rs
rust-xp-aya-ebpf-ebpf/: Cargo.toml
rust-xp-aya-ebpf-ebpf/src/: event.rs  main.rs  maps.rs  vmlinux.rs
rust-xp-aya-ebpf/src/: error.rs  main.rs  trx.rs  worker.rs
tools/indexer/: README.md  mcp-server-cerberus  pyproject.toml
tools/indexer/src/cerberus_indexer/: __init__.py  budget.py  chunking.py  cli.py  config.py  embeddings.py  indexer.py  models.py  patterns.py  qdrant_ops.py  search.py  server.py
tools/indexer/tests/: test_budget.py  test_smoke.py
