[workspace]
resolver = "2"
members = [
    # "cerberus", for now not maintained
    "lib-common",
    "lib-ebpf",
    "lib-rules",
    "lib-event",
    "lib-container",
    "cerberus",
]
default-members = ["cerberus", "lib-common"]

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false, features = [
    "async_tokio",
] }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
flume = { version = "0.11", default-features = false, features = ["async"] }
anyhow = { version = "1", default-features = false }
zerocopy = "0.8"
dns-lookup = "1.0"
zerocopy-derive = "0.8"
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std", "cargo", "derive"] }
libc = { version = "0.2.159", default-features = false }
derive_more = { version = "2", features = ["from", "display"] }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
[profile.release.package.cerberus-ebpf]
debug = 2
codegen-units = 1
