[package]
name = "cerberus-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
cerberus-common = { path = "../cerberus-common" }
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "cerberus"
path = "src/main.rs"
