[package]
name = "lib-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-common = { path = "../lib-common" }
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "cerberus"
path = "src/main.rs"
