[project]
name = "cerberus-indexer"
version = "0.3.0"
description = "Cerberus repository indexer and hybrid MCP server (dense + sparse / RRF)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    "fastembed>=0.4.0",
    "qdrant-client>=1.12.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
# GPU acceleration — install ONE of these instead of plain onnxruntime.
# The indexer auto-detects available providers at startup; no code
# changes needed.  See README.md § GPU Acceleration.
cuda = [
    "onnxruntime-gpu>=1.17.0",
]
directml = [
    "onnxruntime-directml>=1.17.0",
]
rocm = [
    "onnxruntime-rocm>=1.17.0",
]
st = [
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
cerberus-index = "cerberus_indexer.cli:main"
cerberus-mcp-server = "cerberus_indexer.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cerberus_indexer"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
