[package]
name = "lib-container"
version = "0.1.0"
edition = "2024"


license.workspace = true

[dependencies]

derive_more = { version = "2.0.0", features = [
    "from",
    "display",
    "debug",
    "into",
    "deref",
] }
aya = { workspace = true }
aya-log = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
# tokio = { workspace = true, features = [
#     "macros",
#     "rt",
#     "sync",
#     "rt-multi-thread",
#     "net",
#     "signal",
# ] }
tonic = {version="0.14.3", features=["transport"]}
prost = "0.14.3"
tonic-prost = "0.14.3"
tower = "0.5.3"
tokio = { workspace = true, features = ["full"] }
hyper-util = "0.1.19"
[build-dependencies]
tonic-prost-build = "0.14.3"
derive_more = { version = "2.0.0", features = [
    "from",
    "display",
    "debug",
    "into",
    "deref",
] }
