[package]
name = "lib-event"
version = "0.1.0"
edition = "2021"

license.workspace = true

[dependencies]

derive_more = { version = "2.0.0", features = [
    "from",
    "display",
    "debug",
    "into",
    "deref",
] }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }
crossterm = { version = "0.28", features = ["event-stream"] }
flume = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# tokio = { workspace = true, features = [
#     "macros",
#     "rt",
#     "sync",
#     "rt-multi-thread",
#     "net",
#     "signal",
# ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
