[package]
name = "lib-event"
version = "0.1.0"
edition = "2024"


license.workspace = true

[dependencies]

derive_more = { version = "2.0.0", features = [
    "from",
    "display",
    "debug",
    "into",
    "deref",
] }
crossfire = {workspace = true}
# tokio = { workspace = true, features = [
#     "macros",
#     "rt",
#     "sync",
#     "rt-multi-thread",
#     "net",
#     "signal",
# ] }
